app/styles/_molecules/_limited-time-deal.scss
.limited-time-deal-container{
	width: 100%;
	background: $white;
	border: 1px solid $beige;
	.time-limit{
		color: $red;
		@include h5;
		margin-bottom: 0;
		border-bottom: 1px solid $beige;
	}
	&:hover .product-arrow-cta{
		right: 2em;
	}
}

.limited-time-deal{
	.product-image{
		@include maintain-ratio(16 9);
		background-size: 95%;
		background-position: center center;
		background-repeat: no-repeat;
	}
	.logo-container{
		@include media($breakpoint-800){
			width: 12.5%;
		}
	}
	.merchant-name{
		font-size: $sigma;
		@include media($breakpoint-800){
			padding-left: $spacing-default/2;
			font-size: $kappa;
			vertical-align: middle;
			line-height: 63px;
		}
		width: 87.5%;
	}
	.product-name{
		font-size: $iota;
		color: $black;
		line-height: 1.2em;
		@include media($breakpoint-800){
			padding-top: 1em;
		}
	}

	.product-price{
		padding-top: 1.5em;
		.old-price{
			text-decoration: line-through;
			color: $light-gray;
			font-size: $sigma
		}
		.new-price{
			color: $blue;
			font-size: $zeta;
			font-weight: bold;
			line-height: 1.3em;
		}
	}
}

.product-arrow-cta{
	position: absolute;
	bottom: 3em;
	right: 3em;
	-webkit-transition: .5s;
	-o-transition: .5s;
	transition: .5s;
}

